# c-environet-analyzer

./: CMakeLists.txt  README.md  config.json  main.py  resume_bullets.md  verify_build.py
config/: config.json
docs/: data-flow.dot  topology.dot  wiring-onepager.md
examples/: run_demo.sh
examples/arduino/: environet_sensor.ino
include/core/: config.hpp  log.hpp
include/correlate/: correlator.hpp
include/net/: metrics.hpp  pcap_sniffer.hpp  wifi_scan.hpp
include/sensors/: arduino_i2c.hpp
include/util/: time.hpp
network/: performance.py  scanner.py
rpi_router_project/: README.md  __init__.py  main.py
rpi_router_project/config/: router_config_notes.sh  settings.ini
rpi_router_project/network/: __init__.py  network_monitor.py
rpi_router_project/sensors/: __init__.py  ir_sensor.py  temp_humidity_sensor.py  ultrasonic_sensor.py
scripts/: analyze_tests.py  build.sh  install_dependencies.sh  install_deps.sh  run_tests.ps1  run_tests.sh  setup_panda_wifi.sh  setup_service.sh
sensors/: interface.py  ir_mock.py  ultrasonic_mock.py
src/: main.cpp
src/core/: config.cpp  log.cpp
src/correlate/: correlator.cpp
src/net/: metrics.cpp  pcap_sniffer.cpp  wifi_scan.cpp
src/sensors/: arduino_i2c.cpp
src/util/: time.cpp
systemd/: environet.service
tests/: README.md  test_config.cpp  test_configs.json  test_main.cpp  test_sensors.cpp  test_time.cpp
